# alpha-games

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  agents.py  elo.py  game.py  mcts.py  runner.py
docs/: alphazero-outline.md
games/: __init__.py
games/blokus_duo/: __init__.py  actions.py  baselines.py  bitboard.py  game.py  oracle.py  pieces.py  symmetry.py  targets.py
games/connect4/: __init__.py  game.py
games/othello/: __init__.py  game.py  symmetry.py
games/tictactoe/: __init__.py  game.py
metadocs/: blokus-duo-az-design-v0_4.md  blokus-duo-az-design-v0_5.md
scripts/: gen_blokus_perft.py  gen_blokus_symmetry_table.py
tasks/: 001-pin-lambda-aux.md  002-add-numpy-torch-deps.md  003-blokus-encode-state.md  004-blokus-plane-transform.md  005-symmetry-augmentation.md  006-pipeline-decode-test.md  007-d5-network.md  008-sparse-composite-loss.md  009-train-step.md  010-overfit-one-batch.md  011-promote-encoding-abstract.md  complexity-report.md  overview.md
tests/: test_agents.py  test_blokus_actions.py  test_blokus_baselines.py  test_blokus_bitboard.py  test_blokus_game.py  test_blokus_oracle.py  test_blokus_perft.py  test_blokus_pieces.py  test_blokus_symmetry.py  test_blokus_targets.py  test_connect4.py  test_elo.py  test_envelope.py  test_game_contract.py  test_ladder_integration.py  test_mcts_api.py  test_mcts_minimax.py  test_othello_encoding.py  test_othello_game.py  test_othello_perft.py  test_othello_search.py  test_othello_symmetry.py  test_pass_backup.py  test_runner.py  test_subtree_reuse.py  test_tictactoe.py
tests/fixtures/: bad_adapters.py  pass_game.py
tests/fixtures/blokus/: perft.json  symmetry_table.json
tests/reference/: minimax.py
