[project]
name = "alpha-games"
version = "0.0.0"
description = "AlphaZero replication as a game-agnostic engine; POC game Blokus Duo."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Dev-only. core/ is pure-stdlib at M0; NumPy/torch arrive with encoding/training (M2).
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
# Run from the repo root; core/ and games/ are importable as top-level packages
# without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: high-sim search tests; deselect with '-m \"not slow\"'.",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
