[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-games"
version = "0.0.0"
description = "AlphaZero replication as a game-agnostic engine; POC game Blokus Duo."
requires-python = ">=3.11"
# NumPy/torch arrive at M2 with encoding/training; adapters (games/) stay stdlib-pure —
# torch/numpy imports are confined to core/network.py, core/losses.py, core/train.py.
dependencies = ["numpy>=1.26", "torch>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
# Engine + adapters only; excludes metadocs/ and tests/ from the installed package
# (tests still run from source via pytest's pythonpath setting below).
include = ["core*", "games*"]

[tool.pytest.ini_options]
# Run from the repo root; core/ and games/ are importable as top-level packages
# without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: high-sim search tests; deselect with '-m \"not slow\"'.",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
